[gd_scene load_steps=4 format=3 uid="uid://erq61o72or04"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_jme4m"]
[ext_resource type="Texture2D" uid="uid://didksfivvufou" path="res://Arte/rat_2.png" id="1_tk532"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5s5hm"]
radius = 16.0
height = 32.0

[node name="EnemyRat" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_jme4m")
health = 80

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5s5hm")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_tk532")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="TimerAttackCooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerAttackCooldown" to="." method="_on_timer_attack_cooldown_timeout"]
